[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/breaker/BreakingGame.gd" type="Script" id=1]
[ext_resource path="res://game/breaker/Breaker.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/theme/main_theme.tres" type="Theme" id=3]

[node name="BreakingGame" type="Node2D"]
script = ExtResource( 1 )

[node name="Breaker" parent="." instance=ExtResource( 2 )]
position = Vector2( 960.3, 448.14 )

[node name="SlicerArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SlicerArea"]
visible = false
polygon = PoolVector2Array( 32, 32, 32, -32, -32, -32, -32, 32 )

[node name="SlicingPoly" type="Polygon2D" parent="SlicerArea"]
color = Color( 1, 0.568627, 0.921569, 0.454902 )
polygon = PoolVector2Array( -96, 0, 0, 96, 96, 0, 0, -96 )

[node name="Shapes" type="Node2D" parent="SlicerArea"]

[node name="RectPoly" type="Polygon2D" parent="SlicerArea/Shapes"]
visible = false
color = Color( 1, 0.568627, 0.921569, 0.454902 )
polygon = PoolVector2Array( -32, 32, 32, 32, 32, -32, -32, -32 )

[node name="LinePoly" type="Polygon2D" parent="SlicerArea/Shapes"]
visible = false
color = Color( 1, 0.568627, 0.921569, 0.454902 )
polygon = PoolVector2Array( -416, 32, 480, 32, 480, 0, -416, 0 )

[node name="CircoPoly" type="Polygon2D" parent="SlicerArea/Shapes"]
visible = false
color = Color( 1, 0.568627, 0.921569, 0.454902 )
polygon = PoolVector2Array( 0, -32, -16, -27, -28, -16, -32, 0, -29, 16, -17, 27, 0, 32, 18, 27, 29, 15, 32, 0, 30, -15, 20, -27 )

[node name="Button" type="Button" parent="."]
margin_left = 736.0
margin_top = 64.0
margin_right = 850.0
margin_bottom = 112.0
theme = ExtResource( 3 )
text = "RECT"

[node name="Button2" type="Button" parent="."]
margin_left = 896.0
margin_top = 64.0
margin_right = 1036.0
margin_bottom = 112.0
theme = ExtResource( 3 )
text = "CIRCO"

[node name="Button3" type="Button" parent="."]
margin_left = 1088.0
margin_top = 64.0
margin_right = 1177.0
margin_bottom = 112.0
theme = ExtResource( 3 )
text = "LINE"

[connection signal="body_entered" from="SlicerArea" to="." method="_on_MouseArea_body_entered"]
[connection signal="body_exited" from="SlicerArea" to="." method="_on_MouseArea_body_exited"]
